# apex-python

./: CMakeLists.txt  README.md  geo2mag.py  mag2geo.py  setup.cfg
.github/workflows/: ci.yml
reference/: Readme  test.out
src/: apex.f90  geo2mag.f90  geo2mag_benchmark.f90  mag2geo.f90  test.f
src/apexpy3/: __init__.py  build.py
src/apexpy3/tests/: test_apex.py
