[metadata]
name = apexpy3
version = 0.5.0
description = Efficient, no-f2py Apex Python interface
author = Michael Hirsch
author_email = scivision@users.noreply.github.com
url = https://github.com/space-physics/apex-python
license_file = LICENSE
keywords =
  apex
  modified apex
  quasi-dipole
  quasi dipole
  coordinates
  magnetic coordinates
  mlt
  magnetic local time
  conversion
  converting
classifiers =
  Development Status :: 3 - Alpha
  Intended Audience :: Science/Research
  Operating System :: OS Independent
  Programming Language :: Fortran
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Topic :: Scientific/Engineering :: Physics
  Topic :: Utilities
long_description = file: README.md

[options]
python_requires = >= 3.6
include_package_data = True
zip_safe = False
packages = find:
install_requires =
  numpy
package_dir=
    =src

[options.packages.find]
where=src
